--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
                             </p>
                     </div>
                     <div class="right-side">
-                        <img src="New TM.jpeg" alt="hero" class="company-3-img"/>
+                        <img src="img/New%20TM.jpeg" alt="hero" class="company-3-img"/>
                     </div>
                 </div>
             </div>
@@ -71,7 +71,7 @@
                     <div class="leaders">
                         <div class="leader">
                             <div class="img">
-                                <img src="Manmeet.jpg" alt="hero"/>
+                                <img src="img/Manmeet.jpg" alt="hero"/>
                             </div>
                             <div class="desc">
                                 <p class="name">Mr. Manmeet Singh Bhamra</p>
@@ -80,7 +80,7 @@
                         </div>
                         <div class="leader">
                             <div class="img">
-                                <img src="Chanmeet.jpg" alt="hero" class="company-3-img"/>
+                                <img src="img/Chanmeet.jpg" alt="hero" class="company-3-img"/>
                             </div>
                             <div class="desc">
                                 <p class="name">Mr. Chanmeet Singh Bhamra</p>
