--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap"
+          rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css2?family=Hedvig+Letters+Serif:opsz@12..24&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Hedvig+Letters+Serif:opsz@12..24&display=swap"
+          rel="stylesheet">
 
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/home.css">
@@ -19,168 +21,181 @@
     <script src="js/parallax.js"></script>
 </head>
 <body id="home">
-    <header>
-        <div class="header container">
-            <a class="brand-logo">
-                <div class="">
-                    <img src="img/bhamra-logo.svg" alt="bhamra-group"/>
-                </div>
-                <span>BHAMRA GROUP</span>
-            </a>
-            <div class="menu-ul">
-                <a class="menu-li" href="/">The Group</a>
-                <a class="menu-li" href="/about">About</a>
-<!--                <a class="menu-li">Media</a>-->
-                <a class="menu-li" href="/accreditation">Accreditation</a>
+<header>
+    <div class="header container">
+        <a class="brand-logo">
+            <div class="">
+                <img src="img/bhamra-logo.svg" alt="bhamra-group"/>
             </div>
-            <div class="get-intouch">
+            <span>BHAMRA GROUP</span>
+        </a>
+        <div class="menu-ul">
+            <a class="menu-li" href="/">The Group</a>
+            <a class="menu-li" href="/about">About</a>
+            <!--                <a class="menu-li">Media</a>-->
+            <a class="menu-li" href="/accreditation">Accreditation</a>
+        </div>
+        <div class="get-intouch">
+            <div>
+                <a class="socials"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                <a class="socials"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+                <a class="socials"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                <a class="socials"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+            </div>
+            <button>
+                GET IN TOUCH
+            </button>
+        </div>
+    </div>
+</header>
+<div class="content">
+    <section class="page" id="hero-section">
+        <div class="container">
+            <div class="pitch">
                 <div>
-                    <a class="socials"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                    <a class="socials"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
-                    <a class="socials"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-                    <a class="socials"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+                    <p class="pitch-text">TRUSTED SUPPLIER
+                    <p>
+                    <p class="pitch-text">IN CEMENT INDUSTRY</p>
+                    <p class="pitch-text">SINCE <span class="highlight-text">2014</span></p>
+                    <div class="divider"></div>
+                    <p class="soft-pitch-text">
+                        Bhamra Group is a leading RMC Logistics Services Provider, helping build concrete structures in
+                        Mumbai Region since past 9 years. The Group has its own mobile fuel tankers and maintenance team
+                        enabling smooth operations of the Vehicles to the RMC Plants <br/>
+                    </p>
+                    <div class="hero-cta">
+                        <button>
+                            GET IN TOUCH
+                        </button>
+                        <button>
+                            VIEW GROUP COMPANIES
+                        </button>
+                    </div>
                 </div>
-                <button>
-                    GET IN TOUCH
-                </button>
+            </div>
+            <img src="img/hero-section-bg.png" class="hero-image" alt="hero"/>
+        </div>
+    </section>
+    <section id="the-group">
+        <div class="container">
+            <div class="main">
+                <div class="head">
+                    <p class="title">THE GROUP</p>
+                    <p class="desc">Our Group Companies</p>
+                </div>
             </div>
         </div>
-    </header>
-    <div class="content">
-        <section class="page" id="hero-section">
-            <div class="container">
-                <div class="pitch">
-                    <div>
-                        <p class="pitch-text">TRUSTED SUPPLIER <p>
-                        <p class="pitch-text">IN CEMENT INDUSTRY</p>
-                        <p class="pitch-text">SINCE <span class="highlight-text">2014</span></p>
-                        <div class="divider"></div>
-                        <p class="soft-pitch-text">
-                            Bhamra Group is a leading RMC Logistics Services Provider, helping build concrete structures in Mumbai Region since past 9 years. The Group has its own mobile fuel tankers and maintenance team enabling smooth operations of the Vehicles to the RMC Plants <br/>
-                        </p>
-                        <div class="hero-cta">
-                            <button>
-                                GET IN TOUCH
-                            </button>
-                            <button>
-                                VIEW GROUP COMPANIES
-                            </button>
-                        </div>
-                    </div>
+    </section>
+    <section class="layout-2" id="group-1">
+        <div class="container">
+            <div class="main">
+                <div class="left-side">
+                    <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
                 </div>
-                <img src="TM.png" class="hero-image" alt="hero"/>
-            </div>
-        </section>
-        <section id="the-group">
-            <div class="container">
-                <div class="main">
-                    <div class="head">
-                        <p class="title">THE GROUP</p>
-                        <p class="desc">Our Group Companies</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="layout-2" id="group-1">
-            <div class="container">
-                <div class="main">
-                    <div class="left-side">
-                        <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
-                    </div>
-                    <div class="right-side">
-                        <p class="title">Bhamra Concrete Private Limited</p>
-                        <div class="divider"></div>
-                        <p class="desc">With Fleet of more than 250 Trasnit Mixers we deliver Ready Mix Concrete to the whole of Mumbai.
+                <div class="right-side">
+                    <p class="title">Bhamra Concrete Private Limited</p>
+                    <div class="divider"></div>
+                    <p class="desc">With Fleet of more than 250 Trasnit Mixers we deliver Ready Mix Concrete to the
+                        whole of Mumbai.
                         We hold more than a quarter share in the market of RMC Logistics in Mumbai Region</p>
-                    </div>
                 </div>
             </div>
-        </section>
-        <section class="layout-3" id="group-2">
-            <div class="container">
-                <div class="main">
-                    <div class="left-side">
-                        <p class="title">Fuelmen Services Private Limited</p>
-                        <div class="divider"></div>
-                        <p class="desc">With Mobile Fuel Tanker, we deliver diesel at the doorstep to our customers. 
-                                    Monthly 2 lakhs Litres of Diesel is been sold by the company</p>
-                    </div>
-                    <div class="right-side">
-                        <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
-                    </div>
+        </div>
+    </section>
+    <section class="layout-3" id="group-2">
+        <div class="container">
+            <div class="main">
+                <div class="left-side">
+                    <p class="title">Fuelmen Services Private Limited</p>
+                    <div class="divider"></div>
+                    <p class="desc">With Mobile Fuel Tanker, we deliver diesel at the doorstep to our customers.
+                        Monthly 2 lakhs Litres of Diesel is been sold by the company</p>
+                </div>
+                <div class="right-side">
+                    <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
                 </div>
             </div>
-        </section>
-        <section id="services">
-            <div class="container">
-                <div class="main">
-                    <div class="head">
-                        <p class="title">Services</p>
-                        <p class="desc">Services that we provide</p>
-                    </div>
-                    <section class="layout-2" id="service-1">
-                        <div class="container">
-                            <div class="main">
-                                <div class="left-side">
-                                    <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
-                                </div>
-                                <div class="right-side">
-                                    <p class="title">Service 1</p>
-                                    <div class="divider"></div>
-                                    <p class="desc">In House Maintenance Team enable us to keep the fleet running with minimum breakdowns</p>
-                                </div>
+        </div>
+    </section>
+    <section id="services">
+        <div class="container">
+            <div class="main">
+                <div class="head">
+                    <p class="title">Services</p>
+                    <p class="desc">Services that we provide</p>
+                </div>
+                <section class="layout-2" id="service-1">
+                    <div class="container">
+                        <div class="main">
+                            <div class="left-side">
+                                <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
+                            </div>
+                            <div class="right-side">
+                                <p class="title">In-House Maintenance Team</p>
+                                <div class="divider"></div>
+                                <p class="desc">Our commitment to reliability and efficiency goes beyond transportation.
+                                    With our dedicated in-house maintenance team, we ensure that our fleet of transit
+                                    mixers operates seamlessly with minimal breakdowns. Regular maintenance,
+                                    inspections, and swift repairs are integral to our approach, ensuring that your
+                                    concrete transportation needs are met without disruptions.</p>
                             </div>
                         </div>
-                    </section>
-                    <section class="layout-3" id="service-2">
-                        <div class="container">
-                            <div class="main">
-                                <div class="left-side">
-                                    <p class="title">Service 2</p>
-                                    <div class="divider"></div>
-                                    <p class="desc"> We provide Transit Mixers on Taxi Basis</p>
-                                </div>
-                                <div class="right-side">
-                                    <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
-                                </div>
+                    </div>≠
+                </section>
+                <section class="layout-3" id="service-2">
+                    <div class="container">
+                        <div class="main">
+                            <div class="left-side">
+                                <p class="title">Transit Mixers on Taxi Basis</p>
+                                <div class="divider"></div>
+                                <p class="desc">Experience the convenience of concrete transportation with our Transit
+                                    Mixers on Taxi Basis service. We offer a flexible and efficient solution that allows
+                                    you to access our transit mixers when and where you need them. This taxi-based
+                                    approach ensures that you have the right equipment at your disposal, precisely when
+                                    your projects demand it, minimizing delays and optimizing your construction
+                                    workflow.</p>
+                            </div>
+                            <div class="right-side">
+                                <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
                             </div>
                         </div>
-                    </section>
-                </div>
-            </div>
-        </section>
-        <section id="client">
-            <div class="container">
-                <div class="main">
-                    <p class="title">Clients</p>
-                    <p class="desc">Some of are wellknown clients</p>
-                    <div class="clients-row">
-                        <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
-                        <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
-                        <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
-                        <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
-                        <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
-                        <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
-                        <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
-                        <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
-                        <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
                     </div>
+                </section>
+            </div>
+        </div>
+    </section>
+    <section id="client">
+        <div class="container">
+            <div class="main">
+                <p class="title">Clients</p>
+                <p class="desc">Some of are wellknown clients</p>
+                <div class="clients-row">
+                    <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
+                    <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
+                    <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
+                    <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
+                    <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
+                    <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
+                    <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
+                    <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
+                    <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
                 </div>
             </div>
-        </section>
-        <!--<section id="testimonials">
-            <div class="container">
-                <div class="main">
-                    <p class="title">Testimonials</p>
-                    <p class="desc">Read what clients say about us</p>
-                </div>
+        </div>
+    </section>
+    <!--<section id="testimonials">
+        <div class="container">
+            <div class="main">
+                <p class="title">Testimonials</p>
+                <p class="desc">Read what clients say about us</p>
             </div>
-        </section>-->
+        </div>
+    </section>-->
 
-    </div>
-    <footer>
-        Designed & Developed by <a href="https://mithiljain.com"> &nbsp; Mithil Jain</a>
-    </footer>
+</div>
+<footer>
+    Designed & Developed by <a href="https://mithiljain.com"> &nbsp; Mithil Jain</a>
+</footer>
 </body>
 </html>
 
