--- a/careers.html
+++ b/careers.html
@@ -27,21 +27,20 @@
                 <span>BHAMRA GROUP</span>
             </a>
             <div class="menu-ul">
-                <a class="menu-li" href="/">The Group</a>
                 <a class="menu-li" href="/about">About</a>
-                <!--                <a class="menu-li">Media</a>-->
                 <a class="menu-li" href="/accreditation">Accreditation</a>
+                <a class="menu-li" href="/gallery">Gallery</a>
+                <a class="menu-li" href="/careers">Careers</a>
             </div>
             <div class="get-intouch">
                 <div>
-                    <a class="socials"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                    <a class="socials"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
-                    <a class="socials"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-                    <a class="socials"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+                    <a class="socials" href="https://www.facebook.com/p/Bhamra-Concrete-Services-LLP-100057434679951/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                    <a class="socials" href="https://wa.me/919004002324"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+                    <a class="socials" href="mailTo:bhamragroup@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
                 </div>
-                <button>
+                <a href="tel:+9102235647986"><button>
                     GET IN TOUCH
-                </button>
+                </button></a>
             </div>
         </div>
     </header>
