--- a/index.html
+++ b/index.html
@@ -37,13 +37,17 @@
         </div>
         <div class="get-intouch">
             <div>
-                <a class="socials" href="https://www.facebook.com/p/Bhamra-Concrete-Services-LLP-100057434679951/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                <a class="socials" href="https://wa.me/919004002324"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+                <a class="socials" href="https://www.facebook.com/p/Bhamra-Concrete-Services-LLP-100057434679951/"><i
+                        class="fa fa-facebook" aria-hidden="true"></i></a>
+                <a class="socials" href="https://wa.me/919004002324"><i class="fa fa-whatsapp"
+                                                                        aria-hidden="true"></i></a>
                 <a class="socials" href="mailTo:bhamragroup@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
             </div>
-            <a href="tel:+9102235647986"><button>
-                GET IN TOUCH
-            </button></a>
+            <a href="tel:+9102235647986">
+                <button>
+                    GET IN TOUCH
+                </button>
+            </a>
         </div>
     </div>
 </header>
@@ -63,12 +67,16 @@
                         enabling smooth operations of the Vehicles to the RMC Plants <br/>
                     </p>
                     <div class="hero-cta">
-                        <button>
-                            GET IN TOUCH
-                        </button>
-                        <button>
-                            VIEW GROUP COMPANIES
-                        </button>
+                        <a href="tel:+9102235647986">
+                            <button>
+                                GET IN TOUCH
+                            </button>
+                        </a>
+                        <a href="#the-group">
+                            <button>
+                                VIEW GROUP COMPANIES
+                            </button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -94,9 +102,13 @@
                 <div class="right-side">
                     <p class="title">Bhamra Concrete Private Limited</p>
                     <div class="divider"></div>
-                    <p class="desc">With Fleet of more than 250 Trasnit Mixers we deliver Ready Mix Concrete to the
-                        whole of Mumbai.
-                        We hold more than a quarter share in the market of RMC Logistics in Mumbai Region</p>
+                    <p class="desc">Bhamra Concrete Private Limited, a trusted name in the concrete transportation
+                        industry, boasts a formidable fleet of over 250 Transit Mixers. Our commitment to excellence is
+                        evident as we deliver Ready Mix Concrete seamlessly across the entire expanse of Mumbai. With a
+                        market share exceeding a quarter, we proudly stand as a key player in RMC Logistics in the
+                        Mumbai region. Our expansive fleet and market dominance underscore our dedication to reliable
+                        and efficient concrete delivery, making us the preferred choice for projects in this dynamic
+                        urban landscape.</p>
                 </div>
             </div>
         </div>
@@ -107,8 +119,12 @@
                 <div class="left-side">
                     <p class="title">Fuelmen Services Private Limited</p>
                     <div class="divider"></div>
-                    <p class="desc">With Mobile Fuel Tanker, we deliver diesel at the doorstep to our customers.
-                        Monthly 2 lakhs Litres of Diesel is been sold by the company</p>
+                    <p class="desc">Fuelmen Services Private Limited is a pioneer in doorstep diesel delivery, providing
+                        an innovative solution to meet your fuel needs. Our mobile fuel tanker fleet ensures that diesel
+                        is conveniently delivered right to your doorstep. With a robust operational model, we
+                        consistently sell an impressive two lakhs litres of diesel monthly, catering to the diverse fuel
+                        requirements of our valued customers. Fuelmen Services is your reliable partner for efficient
+                        and hassle-free fuel supply, committed to enhancing convenience in every drop.</p>
                 </div>
                 <div class="right-side">
                     <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
@@ -139,7 +155,8 @@
                                     concrete transportation needs are met without disruptions.</p>
                             </div>
                         </div>
-                    </div>≠
+                    </div>
+                    ≠
                 </section>
                 <section class="layout-3" id="service-2">
                     <div class="container">
