--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         <div class="container">
             <div class="pitch">
                 <div>
-                    <p class="pitch-text">TRUSTED SUPPLIER
+                    <p class="pitch-text">PARTNER IN MUMBAI's
                     <p>
-                    <p class="pitch-text">IN CEMENT INDUSTRY</p>
+                    <p class="pitch-text">INFRA GROWTH</p>
                     <p class="pitch-text">SINCE <span class="highlight-text">2014</span></p>
                     <div class="divider"></div>
                     <p class="soft-pitch-text">
@@ -136,7 +136,7 @@
         <div class="container">
             <div class="main">
                 <div class="head">
-                    <p class="title">Services</p>
+                    <p class="title">SERVICES</p>
                     <p class="desc">Services that we provide</p>
                 </div>
                 <section class="layout-2" id="service-1">
@@ -156,7 +156,6 @@
                             </div>
                         </div>
                     </div>
-                    ≠
                 </section>
                 <section class="layout-3" id="service-2">
                     <div class="container">
@@ -199,15 +198,18 @@
             </div>
         </div>
     </section>
-    <!--<section id="testimonials">
-        <div class="container">
-            <div class="main">
-                <p class="title">Testimonials</p>
-                <p class="desc">Read what clients say about us</p>
-            </div>
+    <div class="contact-us">
+        <div class="content-side">
+            <p class="content-title">Reach out!</p>
+            <p class="address"><b>Address:</b> &nbsp; L/ G - 98 - 1, 1/ C, Malwa Compound, Guru Nanak Nagar, L B S Marg, Ghatkopar
+                West, Mumbai - 400086</p>
+            <p class="phone"><b>Contact:</b> 022-35647986, 9004002324
+            <p class="mail"><b>Email:</b> bhamragroup@gmail.com
         </div>
-    </section>-->
-
+        <div class="cta-side">
+            <img src="img/maps.png" alt="maps"/>
+        </div>
+    </div>
 </div>
 <footer>
     Designed & Developed by <a href="https://mithiljain.com"> &nbsp; Mithil Jain</a>
