--- a/accreditation.html
+++ b/accreditation.html
@@ -52,21 +52,21 @@
                     <div class="image-gallery">
                         <div class="image-gallery-row">
                             <div class="card">
-                                <img src="img/certificate.jpeg"/>
+                                <img src="img/accreditation/Ashok.jpeg"/>
                                 <p class="caption">Cerificate 1</p>
                             </div>
                             <div class="card">
-                                <img src="img/certificate.jpeg"/>
+                                <img src="img/accreditation/Eicher.jpeg"/>
                                 <p class="caption">Cerificate 2</p>
                             </div>
                             <div class="card">
-                                <img src="img/certificate.jpeg"/>
+                                <img src="img/accreditation/Godrej.jpeg"/>
                                 <p class="caption">Cerificate 3</p>
                             </div>
                         </div>
                         <div class="image-gallery-row">
                             <div class="card">
-                                <img src="img/certificate.jpeg"/>
+                                <img src="img/accreditation/Indiacrete.jpeg"/>
                                 <p class="caption">Cerificate 1</p>
                             </div>
                             <div class="card">
