--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                     <div class="leaders">
                         <div class="leader">
                             <div class="img">
-                                <img src="img/Manmeet.jpg" alt="hero"/>
+                                <img src="img/face/Manmeet.jpg" alt="hero"/>
                             </div>
                             <div class="desc">
                                 <p class="name">Mr. Manmeet Singh Bhamra</p>
@@ -79,7 +79,7 @@
                         </div>
                         <div class="leader">
                             <div class="img">
-                                <img src="img/Chanmeet.jpg" alt="hero" class="company-3-img"/>
+                                <img src="img/face/Chanmeet.jpg" alt="hero" class="company-3-img"/>
                             </div>
                             <div class="desc">
                                 <p class="name">Mr. Chanmeet Singh Bhamra</p>
