--- a/index.html
+++ b/index.html
@@ -185,15 +185,14 @@
                 <p class="title">Clients</p>
                 <p class="desc">Some of are wellknown clients</p>
                 <div class="clients-row">
-                    <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
-                    <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
-                    <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
-                    <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
-                    <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
-                    <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
-                    <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
-                    <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
-                    <img src="/img/clients/ultratech.png" alt="hero" class="client-img"/>
+                    <img src="img/clients/ACC_Cleint.png" alt="hero" class="client-img"/>
+                    <img src="img/clients/Relcon_Client.png" class="client-img"/>
+                    <img src="img/clients/Prism_Cleint.png" class="client-img"/>
+                    <img src="img/clients/Nuvoco_Client.png" class="client-img"/>
+                    <img src="img/clients/JSW_Client.png" class="client-img"/>
+                    <img src="img/clients/indiacretermc_Client.jpg" class="client-img"/>
+                    <img src="img/clients/Godrej_Client.png" class="client-img"/>
+                    <img src="img/clients/Client_skyway.jpg" class="client-img"/>
                 </div>
             </div>
         </div>
