home page basic structure done

--- a/accreditation.html
+++ b/accreditation.html
@@ -69,14 +69,7 @@
                                 <img src="img/accreditation/Indiacrete.jpeg"/>
                                 <p class="caption">Cerificate 1</p>
                             </div>
-                            <div class="card">
-                                <img src="img/certificate.jpeg"/>
-                                <p class="caption">Cerificate 2</p>
-                            </div>
-                            <div class="card">
-                                <img src="img/certificate.jpeg"/>
-                                <p class="caption">Cerificate 3</p>
-                            </div>
+<!--                            ToDo: add on emore from drive-->
                         </div>
                     </div>
                 </div>
