--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
 <body id="home">
 <header>
     <div class="header container">
-        <a class="brand-logo">
-            <div class="">
-                <img src="img/bhamra-logo.svg" alt="bhamra-group"/>
-            </div>
+        <a class="brand-logo" href="/">
+            <img src="img/bhamra-logo.svg" alt="bhamra-group"/>
             <span>BHAMRA GROUP</span>
         </a>
         <div class="menu-ul">
@@ -43,6 +41,7 @@
                                                                         aria-hidden="true"></i></a>
                 <a class="socials" href="mailTo:bhamragroup@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
             </div>
+<!--            ToDo: check this-->
             <a href="tel:+9102235647986">
                 <button>
                     GET IN TOUCH
@@ -59,7 +58,7 @@
                     <p class="pitch-text">PARTNER IN MUMBAI's
                     <p>
                     <p class="pitch-text">INFRA GROWTH</p>
-                    <p class="pitch-text">SINCE <span class="highlight-text">2014</span></p>
+                    <p class="pitch-text">SINCE <span class="gradient-text">2014</span></p>
                     <div class="divider"></div>
                     <p class="soft-pitch-text">
                         Bhamra Group is a leading RMC Logistics Services Provider, helping build concrete structures in
@@ -87,7 +86,7 @@
         <div class="container">
             <div class="main">
                 <div class="head">
-                    <p class="title">THE GROUP</p>
+                    <p class="title gradient-text">THE GROUP</p>
                     <p class="desc">Our Group Companies</p>
                 </div>
             </div>
@@ -100,7 +99,7 @@
                     <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
                 </div>
                 <div class="right-side">
-                    <p class="title">Bhamra Concrete Private Limited</p>
+                    <p class="title gradient-black-text">Bhamra Concrete Private Limited</p>
                     <div class="divider"></div>
                     <p class="desc">Bhamra Concrete Private Limited, a trusted name in the concrete transportation
                         industry, boasts a formidable fleet of over 250 Transit Mixers. Our commitment to excellence is
@@ -117,7 +116,7 @@
         <div class="container">
             <div class="main">
                 <div class="left-side">
-                    <p class="title">Fuelmen Services Private Limited</p>
+                    <p class="title gradient-black-text">Fuelmen Services Private Limited</p>
                     <div class="divider"></div>
                     <p class="desc">Fuelmen Services Private Limited is a pioneer in doorstep diesel delivery, providing
                         an innovative solution to meet your fuel needs. Our mobile fuel tanker fleet ensures that diesel
@@ -136,7 +135,7 @@
         <div class="container">
             <div class="main">
                 <div class="head">
-                    <p class="title">SERVICES</p>
+                    <p class="title gradient-text">CORE COMPETENCE</p>
                     <p class="desc">Services that we provide</p>
                 </div>
                 <section class="layout-2" id="service-1">
@@ -146,7 +145,7 @@
                                 <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
                             </div>
                             <div class="right-side">
-                                <p class="title">In-House Maintenance Team</p>
+                                <p class="title gradient-black-text">In-House Maintenance Team</p>
                                 <div class="divider"></div>
                                 <p class="desc">Our commitment to reliability and efficiency goes beyond transportation.
                                     With our dedicated in-house maintenance team, we ensure that our fleet of transit
@@ -161,7 +160,44 @@
                     <div class="container">
                         <div class="main">
                             <div class="left-side">
-                                <p class="title">Transit Mixers on Taxi Basis</p>
+                                <p class="title gradient-black-text">Transit Mixers on Taxi Basis</p>
+                                <div class="divider"></div>
+                                <p class="desc">Experience the convenience of concrete transportation with our Transit
+                                    Mixers on Taxi Basis service. We offer a flexible and efficient solution that allows
+                                    you to access our transit mixers when and where you need them. This taxi-based
+                                    approach ensures that you have the right equipment at your disposal, precisely when
+                                    your projects demand it, minimizing delays and optimizing your construction
+                                    workflow.</p>
+                            </div>
+                            <div class="right-side">
+                                <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="layout-2" id="service-3">
+                    <div class="container">
+                        <div class="main">
+                            <div class="left-side">
+                                <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
+                            </div>
+                            <div class="right-side">
+                                <p class="title gradient-black-text">Own Fueling Diesel Tankers</p>
+                                <div class="divider"></div>
+                                <p class="desc">Our commitment to reliability and efficiency goes beyond transportation.
+                                    With our dedicated in-house maintenance team, we ensure that our fleet of transit
+                                    mixers operates seamlessly with minimal breakdowns. Regular maintenance,
+                                    inspections, and swift repairs are integral to our approach, ensuring that your
+                                    concrete transportation needs are met without disruptions.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="layout-3" id="service-4">
+                    <div class="container">
+                        <div class="main">
+                            <div class="left-side">
+                                <p class="title gradient-black-text">Experienced Personnel/Management</p>
                                 <div class="divider"></div>
                                 <p class="desc">Experience the convenience of concrete transportation with our Transit
                                     Mixers on Taxi Basis service. We offer a flexible and efficient solution that allows
@@ -182,7 +218,7 @@
     <section id="client">
         <div class="container">
             <div class="main">
-                <p class="title">Clients</p>
+                <p class="title gradient-text">Clients</p>
                 <p class="desc">Some of are wellknown clients</p>
                 <div class="clients-row">
                     <img src="img/clients/ACC_Cleint.png" alt="hero" class="client-img"/>
@@ -193,15 +229,15 @@
                     <img src="img/clients/indiacretermc_Client.jpg" class="client-img"/>
                     <img src="img/clients/Godrej_Client.png" class="client-img"/>
                     <img src="img/clients/Client_skyway.jpg" class="client-img"/>
+                    <img src="img/clients/Ultratech_client.png" class="client-img"/>
                 </div>
             </div>
         </div>
     </section>
     <div class="contact-us">
         <div class="content-side">
-            <p class="content-title">Reach out!</p>
-            <p class="address"><b>Address:</b> &nbsp; L/ G - 98 - 1, 1/ C, Malwa Compound, Guru Nanak Nagar, L B S Marg, Ghatkopar
-                West, Mumbai - 400086</p>
+            <p class="content-title gradient-text">Reach out!</p>
+            <p class="address"><b>Address:</b> &nbsp; 114, Sai Commercial Building, BKS Devshi Marg, Deonar, Govandi, Mumbai - 400 088</p>
             <p class="phone"><b>Contact:</b> 022-35647986, 9004002324
             <p class="mail"><b>Email:</b> bhamragroup@gmail.com
         </div>
