--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Bhamra Group of Companies</title>
     <link rel="icon" href="img/bhamra-logo.png" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,7 +34,7 @@
             <a class="menu-li" href="/gallery">Gallery</a>
             <a class="menu-li" href="/careers">Careers</a>
         </div>
-        <div class="get-intouch">
+        <a class="get-intouch">
             <div>
                 <a class="socials" href="https://www.facebook.com/p/Bhamra-Concrete-Services-LLP-100057434679951/"><i
                         class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -47,9 +48,28 @@
                     GET IN TOUCH
                 </button>
             </a>
-        </div>
-    </div>
-</header>
+            <div>
+                <script>
+                  function openNav() {
+                    document.getElementById("mySidenav").style.width = "100%";
+                  }
+
+                  function closeNav() {
+                    document.getElementById("mySidenav").style.width = "0";
+                  }
+                </script>
+                <div id="mySidenav" class="sidenav">
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                    <a class="menu-li" href="/">The Group</a>
+                    <a class="menu-li" href="/about">About</a>
+                    <a class="menu-li" href="/accreditation">Accreditation</a>
+                    <a class="menu-li" href="/careers">Careers</a>
+                </div>
+                <span class="hamburger-menu" onclick="openNav()">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </span>
+            </div>
+    </header>
 <div class="content">
     <section class="page" id="hero-section">
         <div class="container">
