--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
             <a class="menu-li" href="/gallery">Gallery</a>
             <a class="menu-li" href="/careers">Careers</a>
         </div>
-        <a class="get-intouch">
+        <div class="get-intouch">
             <div>
                 <a class="socials" href="https://www.facebook.com/p/Bhamra-Concrete-Services-LLP-100057434679951/"><i
                         class="fa fa-facebook" aria-hidden="true"></i></a>
                 <a class="socials" href="https://wa.me/919004002324"><i class="fa fa-whatsapp"
                                                                         aria-hidden="true"></i></a>
-                <a class="socials" href="mailTo:bhamragroup@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                <a class="socials" href="mailto:bhamragroup@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
             </div>
-<!--            ToDo: check this-->
+            <!--            ToDo: check this-->
             <a href="tel:+9102235647986">
                 <button>
                     GET IN TOUCH
@@ -50,13 +50,13 @@
             </a>
             <div>
                 <script>
-                  function openNav() {
-                    document.getElementById("mySidenav").style.width = "100%";
-                  }
+                    function openNav() {
+                        document.getElementById("mySidenav").style.width = "100%";
+                    }
 
-                  function closeNav() {
-                    document.getElementById("mySidenav").style.width = "0";
-                  }
+                    function closeNav() {
+                        document.getElementById("mySidenav").style.width = "0";
+                    }
                 </script>
                 <div id="mySidenav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -69,7 +69,9 @@
                     <i class="fa fa-bars" aria-hidden="true"></i>
                 </span>
             </div>
-    </header>
+        </div>
+    </div>
+</header>
 <div class="content">
     <section class="page" id="hero-section">
         <div class="container">
@@ -241,15 +243,15 @@
                 <p class="title gradient-text">Clients</p>
                 <p class="desc">Some of are wellknown clients</p>
                 <div class="clients-row">
-                    <img src="img/clients/ACC_Cleint.png" alt="hero" class="client-img"/>
-                    <img src="img/clients/Relcon_Client.png" class="client-img"/>
-                    <img src="img/clients/Prism_Cleint.png" class="client-img"/>
-                    <img src="img/clients/Nuvoco_Client.png" class="client-img"/>
-                    <img src="img/clients/JSW_Client.png" class="client-img"/>
-                    <img src="img/clients/indiacretermc_Client.jpg" class="client-img"/>
-                    <img src="img/clients/Godrej_Client.png" class="client-img"/>
-                    <img src="img/clients/Client_skyway.jpg" class="client-img"/>
-                    <img src="img/clients/Ultratech_client.png" class="client-img"/>
+                    <img src="img/clients/ACC_Cleint.png" alt="ACC_Cleint" class="client-img"/>
+                    <img src="img/clients/Relcon_Client.png" alt="Relcon_Client" class="client-img"/>
+                    <img src="img/clients/Prism_Cleint.png" alt="Prism_Cleint" class="client-img"/>
+                    <img src="img/clients/Nuvoco_Client.png" alt="Nuvoco_Client" class="client-img"/>
+                    <img src="img/clients/JSW_Client.png" alt="JSW_Client" class="client-img"/>
+                    <img src="img/clients/indiacretermc_Client.jpg" alt="indiacretermc_Client" class="client-img"/>
+                    <img src="img/clients/Godrej_Client.png" alt="Godrej_Client" class="client-img"/>
+                    <img src="img/clients/Client_skyway.jpg" alt="Client_skyway" class="client-img"/>
+                    <img src="img/clients/Ultratech_client.png" alt="Ultratech_client" class="client-img"/>
                 </div>
             </div>
         </div>
@@ -257,7 +259,8 @@
     <div class="contact-us">
         <div class="content-side">
             <p class="content-title gradient-text">Reach out!</p>
-            <p class="address"><b>Address:</b> &nbsp; 114, Sai Commercial Building, BKS Devshi Marg, Deonar, Govandi, Mumbai - 400 088</p>
+            <p class="address"><b>Address:</b> &nbsp; 114, Sai Commercial Building, BKS Devshi Marg, Deonar, Govandi,
+                Mumbai - 400 088</p>
             <p class="phone"><b>Contact:</b> 022-35647986, 9004002324
             <p class="mail"><b>Email:</b> bhamragroup@gmail.com
         </div>
