--- a/index.html
+++ b/index.html
@@ -48,27 +48,27 @@
                     GET IN TOUCH
                 </button>
             </a>
-            <div>
-                <script>
-                    function openNav() {
-                        document.getElementById("mySidenav").style.width = "100%";
-                    }
+        </div>
+        <div>
+            <script>
+                function openNav() {
+                    document.getElementById("mySidenav").style.width = "100%";
+                }
 
-                    function closeNav() {
-                        document.getElementById("mySidenav").style.width = "0";
-                    }
-                </script>
-                <div id="mySidenav" class="sidenav">
-                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                    <a class="menu-li" href="/">The Group</a>
-                    <a class="menu-li" href="/about">About</a>
-                    <a class="menu-li" href="/accreditation">Accreditation</a>
-                    <a class="menu-li" href="/careers">Careers</a>
-                </div>
-                <span class="hamburger-menu" onclick="openNav()">
+                function closeNav() {
+                    document.getElementById("mySidenav").style.width = "0";
+                }
+            </script>
+            <div id="mySidenav" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <a class="menu-li" href="/about">About</a>
+                <a class="menu-li" href="/accreditation">Accreditation</a>
+                <a class="menu-li" href="/gallery">Gallery</a>
+                <a class="menu-li" href="/careers">Careers</a>
+            </div>
+            <span class="hamburger-menu" onclick="openNav()">
                     <i class="fa fa-bars" aria-hidden="true"></i>
                 </span>
-            </div>
         </div>
     </div>
 </header>
